--- a/BasicQuiz/index.html
+++ b/BasicQuiz/index.html
@@ -39,8 +39,8 @@ What Can Be Done
         <div class="col-sm-12 banner"></div>
         <div class="col-sm-12 start" id="start"><h1>START TRIVIA</h1></div>
         <div class="col-sm-12 gameOPT time" id="displayTime">Time Remaining</div>
-        <div class="col-sm-12 gameOPT" id="quiz">Questions</div>
-        <div class="col-sm-12 gameEND">Answer</div>
+        <div class="col-sm-12 gameOPT quiz" id="quiz"></div>
+        <div class="col-sm-12 gameOPT end" id="end"></div>
     </div>
 
 </body>
